--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "grunt-contrib-less": "^1.4.1",
     "grunt-contrib-watch": "^1.0.0",
     "jit-grunt": "^0.10.0",
+    "kickstart-node": "^3.0.75",
     "less": "^2.7.3",
     "mocha": "^4.0.1"
   }
