--- a/package.json
+++ b/package.json
@@ -1,35 +1,14 @@
 {
-  "name": "converse",
-  "version": "0.0.1",
-  "description": "Web app for facilitating discussion between users who disagree on a political topic.",
-  "main": "index.html",
+  "name": "application-name",
+  "version": "1.0.0",
+  "description": "Application description.",
   "scripts": {
-    "start": "grunt"
+    "start": "meteor --settings settings-development.json",
+    "staging": "meteor deploy staging.meteor.com --settings settings-development.json",
+    "production": "meteor deploy production.meteor.com --settings settings-production.json"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/converseapp/converse.git"
-  },
-  "keywords": [
-    "converse",
-    "app",
-    "web",
-    "politics",
-    "discuss"
-  ],
-  "author": "Converse App",
-  "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/converseapp/converse/issues"
-  },
-  "homepage": "https://github.com/converseapp/converse#readme",
-  "dependencies": {},
-  "devDependencies": {
-    "grunt": "^1.0.1",
-    "grunt-contrib-less": "^1.4.1",
-    "grunt-contrib-watch": "^1.0.0",
-    "jit-grunt": "^0.10.0",
-    "less": "^2.7.3",
-    "mocha": "^4.0.1"
+  "devDependencies": {},
+  "dependencies": {
+    "lodash": "^4.5.1"
   }
 }
